--- a/index.html
+++ b/index.html
@@ -5,18 +5,21 @@
     <link href=".\resources\css\style.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+
     <h1>Discover hidden places in the world around you</h1>
-    <P class="download"><a href="">Download Excursion (Coming soon!)</a></P>
+    <P><a class="download" href="">Download Excursion (Coming soon!)</a></P>
     <video src=".\resources\videos\excursion.mp4" autoplay loop>
      Not suport video
     </video>
 
     <h2>Your personal travel guide</h2>
     <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
-    <img src=".\resources\images\camp.jpg">
+    <p><img src=".\resources\images\camp.jpg"></p>
+
     <p><img src=".\resources\images\phone.png"></p>
     <h2>Coming Soon for iPhone and Android</h2>
-    <p class="download"><a href="">Download Excursion (Coming soon!)</a></p>
-    <p class="copyright">© Excursion<p>
+    <p><a class="download" href="">Download Excursion (Coming soon!)</a></p>
+    
+    <p class="copyright">&copy; Excursion<p>
   </body>
 </html>
